暂定修改识别坐标

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,14 +77,13 @@
         // 获取preview，构建formData
         const preview = document.getElementById("preview");
         const formData = new FormData();
-        
-        // 按照x=0.2,y=0.2,w=0.6,h=0.6的比例截取图片
+        const 坐标={x:0.3164,y:0.04190000000000001,dx:0.464,dy:0.108}
         const canvas = document.createElement("canvas");
         const ctx = canvas.getContext("2d");
-        const x = preview.width * 0.2;
-        const y = preview.height * 0.2;
-        const w = preview.width * 0.6;
-        const h = preview.height * 0.6;
+        const x = preview.width * 坐标.x;
+        const y = preview.height * 坐标.y;
+        const w = preview.width * (坐标.x+坐标.dx);
+        const h = preview.height * (坐标.y+坐标.dy);
         canvas.width = w;
         canvas.height = h;
         ctx.drawImage(preview, x, y, w, h, 0, 0, w, h);
@@ -102,7 +101,7 @@
               if (!response.ok) {
                 throw new Error("Network response was not ok");
               }
-              return response.json();
+              return response.text();
             })
             .then((data) => {
               // 处理识别结果
