--- a/templates/mark.html
+++ b/templates/mark.html
@@ -89,7 +89,7 @@
 
         output.innerHTML = `矩形坐标: (${percentageX.toFixed(2)}%, ${percentageY.toFixed(2)}%)<br>`;
         output.innerHTML += `矩形大小: (${percentageWidth.toFixed(2)}%, ${percentageHeight.toFixed(2)}%)`;
-        output.innerHTML += `<br>{x:${percentageX.toFixed(2)/100},y:${percentageY.toFixed(2)/100},dx:${percentageWidth.toFixed(2)/100},dy:${percentageHeight.toFixed(2)/100}}`;
+        output.innerHTML += `<br>{  ${percentageX.toFixed(2)/100},y:${percentageY.toFixed(2)/100},dx:${percentageWidth.toFixed(2)/100},dy:${percentageHeight.toFixed(2)/100}}`;
     }
 </script>
 </body>
