添加ui更改裁切界面前置工作

--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,6 @@
           </div> `;
         });
       }
-      function 上传() {}
       document.addEventListener("DOMContentLoaded", 初始化);
     </script>
     <style>
@@ -253,7 +252,7 @@
       </div>
     </div>
     <div class="按钮">
-      <button class="upload-info">上传</button>
+      <button class="upload-info">保存至数据库</button>
       <button class="upload-img" onclick="识别()">识别</button>
     </div>
   </body>
