--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="/static/css/item.css" />
     <link rel="stylesheet" href="/static/css/button.css" />
     <link rel="stylesheet" href="/static/css/cut.css" />
+    <script src="/static/js/button.js"></script>
     <script>
       var data = [];
       function previewImage(event) {
         const input = event.target;
         const preview = document.getElementById("preview");
-
+        console.log(input.files[0].name);
         if (input.files && input.files[0]) {
           const reader = new FileReader();
           const formData = new FormData();
@@ -261,7 +262,7 @@
         <input
           type="file"
           id="fileInput"
-          accept=".pdf"
+          accept=".pdf,.png"
           onchange="previewImage(event)"
         />
         <h1 class="提示词">点击上传，当前仅支持pdf</h1>
@@ -281,6 +282,7 @@
     <div class="按钮">
       <button class="upload-info" onclick="保存至数据库()">保存至数据库</button>
       <button class="upload-img" onclick="识别()">识别</button>
+      <button class="check-true" onclick="查验真伪()">查验真伪</button>
     </div>  
   </body>
 </html>
