加载配置重置data数据；你的缩放固然会影响我，倘若我直接固定1100px，阁下该如何应对

--- a/templates/index.html
+++ b/templates/index.html
@@ -264,6 +264,7 @@
           var reader = new FileReader();
           reader.onload = function (e) {
             var dataJson = JSON.parse(e.target.result);
+            data = [];
             for (var key in dataJson) {
               data.push([key].concat(dataJson[key], "未识别"));
             }
