加入高贵的opencv功能

--- a/templates/index.html
+++ b/templates/index.html
@@ -297,7 +297,7 @@
           accept=".pdf,.png"
           onchange="previewImage(event)"
         />
-        <h1 class="提示词">点击上传，当前仅支持pdf</h1>
+        <h1 class="提示词">点击上传，当前支持图片与pdf</h1>
         <img id="preview" class="upload-preview" src="" alt="" />
       </div>
       <div class="add-item" onclick="加一条()">
